@@ -1,0 +1,20 @@
+﻿
+Microsoft Visual Studio Solution File, Format Version 12.00
+# Visual Studio 2012
+Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "step_world_v4_double_buffered", "step_world_v4_double_buffered\step_world_v4_double_buffered.vcxproj", "{07096249-5204-4604-AACE-0150E172C851}"
+EndProject
+Global
+	GlobalSection(SolutionConfigurationPlatforms) = preSolution
+		Debug|Win32 = Debug|Win32
+		Release|Win32 = Release|Win32
+	EndGlobalSection
+	GlobalSection(ProjectConfigurationPlatforms) = postSolution
+		{07096249-5204-4604-AACE-0150E172C851}.Debug|Win32.ActiveCfg = Debug|Win32
+		{07096249-5204-4604-AACE-0150E172C851}.Debug|Win32.Build.0 = Debug|Win32
+		{07096249-5204-4604-AACE-0150E172C851}.Release|Win32.ActiveCfg = Release|Win32
+		{07096249-5204-4604-AACE-0150E172C851}.Release|Win32.Build.0 = Release|Win32
+	EndGlobalSection
+	GlobalSection(SolutionProperties) = preSolution
+		HideSolutionNode = FALSE
+	EndGlobalSection
+EndGlobal
