@@ -1,10 +1,13 @@
 Changes I had to make to get things to work in Visual Studio 2012
 
-Using AMD APP SDK header files and library
+Using AMD APP SDK V2.9 header files and library
 
 test_opencl.cpp:
 Comment out #include <alloca.h>
-Also need to use given (from CW download) header file as AMD header does not have enqueueBarrier as a member of CommandQueue
+
+enqueueBarrier is a deprecated API in 1.2
+solution: add #define CL_USE_DEPRECATED_OPENCL_1_1_APIS
+However could use given (from CW download) header file instead
 
 heat.cpp:
 #include <string>
@@ -21,5 +24,9 @@ strtof() not provided in header file. Use (float) strtod() instead
 src/your_login/step_world_v3_opencl.cpp:
 I needed to put #define NOMINMAX at the top to stop a minwindef.h macro than gave errors when usind std::min and std::max
 (This issue was sparked by including the cl.hpp file for some reason)
+
+src/your_login/step_world_v4_double_buffered:
+#define NOMINMAX
+#define CL_USE_DEPRECATED_OPENCL_1_1_APIS
 
 
